# sphinx-init

./: .coveragerc  .dokerignore  CONTRIBUTING.md  Dockerfile  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/modules/: math.py
docs/source/: conf.py  modules.rst  tests.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698_main_py.html  z_7586f4f5fc25ddcd_math_py.html
tests/: test_main.py  test_math.py  test_math_csv.py
